# postmodern_lab2

./: CMakeLists.txt
Sorter/: Sorter.cpp  Sorter.h
SorterTests/: CMakeLists.txt  SorterTests.cpp
